--- a/sales.html
+++ b/sales.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body><a href="sales.html">
-    <h1>Hello</h1>
-    <a/>
+<body>
+    <h1>This is the sales page.</h1>
 </body>
 </html>
