added quite a few new things

--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <style>
+    .gotobutton{
+        border: 0cap; padding: 0cap; 
+        background: none; 
+        cursor: pointer;
+    }
+    </style>
 </head>
-<body><a href="sales.html">
-    <h1>Hello</h1>
+<body>
+    <a href="sales.html">
+    <h1>
+        To sales page.
+    </h1>
     <a/>
+
+    <form action="actionpage.html" method="get">
+        <input type="text" id="lookup" name="Lookup"><br>
+    </form>
+
+    <button title="Hello button" onclick="alert('hello again')"; class="gotobutton"; >
+        <img src="image2.jpg" alt="this is an image of a green button" height="200">
+    </button>
+
+    <button type="button" id="button0" name="button0" value="Button0">
+    <label for="button0">
+        Button 0
+    </label>
+
+    </button>
+
+    <input type="checkbox" id="button1" name="button1" value="Button 1">
+    <label for="button1">
+        Button 1
+    </label>
 </body>
 </html>
